testsuite/tests/rep-poly/RepPolyRecordUpdate.stderr
RepPolyRecordUpdate.hs:7:35: error: [GHC-55287]
    • The newtype constructor pattern
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the pattern: MkX {fld = fld}
      In an equation for ‘fld’: fld MkX {fld = fld} = fld

RepPolyRecordUpdate.hs:7:35: error: [GHC-55287]
    The first pattern in the equation for ‘fld’
    does not have a fixed runtime representation.
    Its type is:
      X a :: TYPE rep

RepPolyRecordUpdate.hs:13:9: error: [GHC-55287]
    • The field ‘fld’ does not have a fixed runtime representation.
      Its type is:
        a0 :: TYPE rep0
      When unifying:
        • X a0
        • X a
      Cannot unify ‘rep’ with the type variable ‘rep0’
      because the former is not a concrete ‘RuntimeRep’.
    • In a record update at field ‘fld’,
      with type constructor ‘X’
      and data constructor ‘MkX’.
      In the expression: x {fld = meth ()}
      In an equation for ‘upd’: upd x = x {fld = meth ()}

